_sass/_styles.scss
// all custom styles for the site


.banner {
  padding-top: ($margin * 3 );
  padding-bottom: ($margin * 3 );
  text-align: center;
  color: $white;
  &__bg {
    @include background-attributes;
    background-color: $se-dark-grey;
  }
  .title {
    line-height: 1;
    text-shadow:
      0 0 60px rgba(0,0,0,.66),
      0 0 60px rgba(0,0,0,.66),
      0 0 60px rgba(0,0,0,.66),
      0 0 60px rgba(0,0,0,.66)
    ;
  }
}

.line-length {
  max-width: $large;
  text-align: center;
  margin-left: auto;
  margin-right: auto;
}

.inline-icon {
  max-height: 60px;
  margin-bottom: .2em;
  vertical-align: middle;
}

$button-size: 100px;
.play-button {
  position: absolute;
  top: 50%;
  left: 50%;
  display: block;
  height: $button-size;
  margin-top: -($button-size/2);
  margin-left: -($button-size/2);
}

.video {
  position: relative;
  height: 0;
  max-width: 100%;
  padding-bottom: 56.25%;
  background-color: #000;
  overflow: hidden;
  &__iframe {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
  }
  .csstransforms.csstransforms3d &__wrap {
    position: absolute;
    top: 50%;
    width: 100%;
    transform: translateY(-50%);
  }
}

// ---------- Section styles ----------

.invert-text { color: $white; }
.bg {
  &--white          { background-color: $white; }
  &--black          { background-color: $black; }
  &--light-grey     { background-color: $light-grey; }
  &--dark-grey      { background-color: $dark-grey; }
  &--text-black     { background-color: $text-black; }
  &--text-heading   { background-color: $text-heading; }
  &--text-paragraph { background-color: $text-paragraph; }
  &--se-orange      { background-color: $se-orange; }
  &--se-light-grey  { background-color: $se-light-grey; }
  &--se-dark-grey   { background-color: $se-dark-grey; }
  &--blue           { background-color: $jersey-blue; }
  &--cyan           { background-color: $jersey-cyan; }
}

.color {
  &--blue { color: $jersey-blue; }
  &--cyan { color: $jersey-cyan; }
}

// ---------- button ----------

.btn {
  display:inline-block;
  padding: .5em 1.5em;
  background-color: $jersey-cyan;
  color: white;
  font-weight: 600;
  text-transform: uppercase;;
  letter-spacing: 0.01em;
  font-size: 0.9em;
  @include transition;
  &:hover {
    color: white;
    background-color: $jersey-blue;
    text-decoration: none;
  }
  * + & { margin-top: 1em; }
  &--large {
    padding: 0.8em 1.5em;
    font-size: 1.1em;
  }
  &--white {
    background-color: $white;
    color: $jersey-blue;
  }
  &--blue {
    background-color: $jersey-blue;
    color: $white;
  }
  &--arrow {
    &:after {
      content: "";
      display: inline-block;
      height: 11px;
      width: 30px;
      background-image: url(../img/icons/arrow-white.png);
      background-size: contain;
      background-position: center right;
      background-repeat: no-repeat;
    }
  }
}

.arrow-link {
  &:hover { text-decoration: none; }
  &:after {
    content: "";
    display: inline-block;
    height: 13px;
    width: 25px;
    margin-bottom: 2px;
    vertical-align: middle;
    background-image: url(../img/icons/arrow-grey.png);
    background-position: center right;
    background-repeat: no-repeat;
    background-size: contain;
  }
  &--white {
    &:after { background-image: url(../img/icons/arrow-white.png); }
  }
}


// ---------- ambassadors ----------

.ambassador {
  background-color: $light-grey;
  text-align: center;
  &__content { padding-top: $margin; }
  &:nth-child(even){ background-color: $white; }
  @include bp(large){
    @include layout( 12 $gutters );
    text-align: left;
    &__content { padding-top: 0; }
    &__content   { @include span(7); }
    &__video     { @include span(last 5); }
    .ambassador__wrap {
      display: flex;
      align-items: center;
      flex-direction: row-reverse;
    }
    // alternate style & column swap
    &:nth-child(even){
      background-color: $white;
      .ambassador__wrap {
        flex-direction: row;
      }
      .ambassador__video     { @include span(5); }
      .ambassador__content   { @include span(last 7); }
    }
  }
}


// ---------- section overview ----------

.tabs { @include container(100%); }
.tab {
  position: relative;
  height: 11em;
  color: $white;
  text-align: center;
  background-color: $jersey-grey;
  border-bottom: 0 solid $jersey-blue;
  cursor: pointer;
  @include transition;
  @include background-attributes;
  @include bp(xlarge){
    @include span(3 inside no-gutters);
    &.is-open {
      border-bottom-width: .5em;
    }
  }
  &__title {
    position: absolute;
    left: 0;
    right: 0;
    bottom: .25em;
    z-index: $z-content-upper;
  }
  &__link {
    position: absolute;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    z-index: $z-content-upper;
    @include bp(xlarge){
      display: none;
    }
  }
  &__bg-cover {
    position: absolute;
    top: 0;
    left: 0;
    right: 0;
    z-index: $z-content;
    height: 100%;
    background-image: url('../img/bg/blue-fade.png');
    background-position: center;
    background-repeat: repeat-x;
    background-size: contain;
  }
}
.contents {
  display: none;
  @include bp(xlarge){
    display: block;
  }
}
.content {
  padding-top: 4em;
  text-align: center;
  &__bottom {
    position: relative;
    padding-top: 4em;
    color: $white;
    vertical-align: middle;
    overflow: hidden;
    &-section {
      height: 100%;
      padding: .75em 1.5em;
    }
  }
}
$ammbassdor-size: 5em;
.ambassador-avatar {
  position: absolute;
  top: 2.5em;
  margin-left: -($ammbassdor-size * 1.2);
  width: $ammbassdor-size;
  height: $ammbassdor-size;
  border-radius: $ammbassdor-size;
}

